# sym-code

./: Readme.md
actions/: export.sh  import.sh
crczoo/: Cargo.toml
docs/: COPYRIGHT
symcode/: Cargo.toml  Readme.md
symcode/src/: math.rs
symcode/src/acute32/: alphabet.rs  finder.rs  fitter.rs  library.rs  reader.rs  symbol.rs  symcode_config.rs  trace.rs  util.rs
symcode/src/interfaces/: debugger.rs  finder.rs  fitter.rs  generator.rs  reader.rs  scanner.rs  symbol.rs
webapp/: Cargo.toml  Readme.md
webapp/src/: app.rs  canvas.rs  debugger.rs  helper.rs
