[package]
name = "crczoo"
version = "0.1.3"
authors = ["Chris Tsang <tyt2y7@gmail.com>"]
edition = "2018"
description = "CRC Zoo: A collection of Cyclic Redundancy Check (CRC) algorithms"
license = "MIT OR Apache-2.0"
homepage = "http://www.visioniechor.org/"
repository = "https://github.com/visioniechor/symcode/"
categories = ["algorithms"]
keywords = ["crc", "crc5", "crc8", "crc16", "crc32"]

[lib]
crate-type = ["rlib"]
